1999-06-22  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmForm/FvwmForm.c (ReadXServer): made char array unsigned (test
	for >= 160 may fail).

Thu Apr 29 16:08:54 1999  DanEspen  <dje@blue>

	* FvwmForm/FvwmForm.c (ReadXServer): Allow international chars in form.

1999-04-27  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* FvwmButtons/FvwmButtons.c (main): Fix for PR#206.

1999-03-17  Steven Michael ROBBINS  <stever@jeff.cs.mcgill.ca>

	* FvwmM4/FvwmM4.c (m4_defs): fix bad interaction between
	-m4-prefix and -m4-[e|s]quotes.  Reported as PR#201 and PR#246.

1999-03-09  Andrew T. Veliath  <andrewtv@usa.net>

	* FvwmRearrange/FvwmRearrange.c: Add GPL header.

1999-02-14  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmIconBox/FvwmIconBox.c (RelieveWindow):
	* FvwmIconBox/FvwmIconBox.h: removed inline from declaration of
	RelieveWindow

1999-01-22  Paul D. Smith  <psmith@gnu.org>

	* FvwmWinList/Mallocs.c (UpdateString): Increment the length, not
	the pointer.

1999-01-17  Chris Rankin  <rankinc@bellsouth.net>

	* FvwmWinList/ButtonArray.c (UpdateButton): Use saferealloc().
	* FvwmWinList/FvwmWinList.c: ShutMeDown turned into an
	exit-procedure (installed via atexit).
	SIGPIPE and SIGTERM now set a global flag which breaks the event
	loop, rather than exiting directly.
	Event loop restyled after FvwmIconMan, which is neater and simpler.
	Signals installed with sigaction (if present).
	If no sigaction, then use signal & siginterrupt (BSD 4.3).
	If no siginterrupt then just bang a couple of rocks together.
	Added "const" and function attributes to a select few prototypes.
	Loose malloc turned into safemalloc.
	* FvwmWinList/Mallocs.c (saferealloc): saferealloc() fixed.
	* FvwmWinList/Mallocs.h: Removed duplicate fvwmlib prototype
	(CopyString).
	Removed useless prototype (CatString2).

Sat Jan 16 00:31:25 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* FvwmSaveDesk/FvwmSaveDesk.1:
	* FvwmSaveDesk/FvwmSaveDesk.c (do_save): No longer have build-time